# feasibility-data

./: .copier-answers.yml  .gitattributes  .gitignore  .lfsconfig  .nojekyll  .typos.toml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE-MIT.html  LICENSE-MIT.md  README.md  README.qmd  _metadata.yml  _quarto.yml  datapackage.json  index.html  index.qmd  justfile  listings.json  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.config/: cliff.toml  cog.toml  typos.toml
.github/: CODEOWNERS
.github/workflows/: add-to-project.yml  build-website.yml  release.yml
docs/: _metadata.yml  custom.css  index.html
docs/includes/: _badges.qmd
docs/resources/: adverse_events.html  bedq.html  besg_1_screening.html  besgsdag_10_5f76.html  besgsdag_5.html  besgsdag_6.html  besgsdag_7.html  besgsdag_8.html  besoegsdag_2.html  besoegsdag_3.html  besoegsdag_4.html  besoegsdag_9.html  bookinger.html  diabetes_distress_paid5_scale.html  diabetes_status.html  ekstra_kontakt.html  european_quality_of_life_5_dimensions_eq5d5l.html  fase_1_ditetiske_afvigelser.html  fase_2_ditetiske_afvigelser.html  fase_3_ditetiske_afvigelser.html  foer_besoegsdag_2.html  foer_besoegsdag_3.html  foer_besoegsdag_4.html  fr_besgsdag_1_screening.html  fr_besgsdag_5.html  fr_besgsdag_5_9bba.html  fr_besgsdag_6.html  fr_besgsdag_7.html  fr_besgsdag_8.html  fr_besgsdag_9.html  gruppemde_uge_1.html  gruppemde_uge_11.html  gruppemde_uge_13.html  gruppemde_uge_15.html  gruppemde_uge_17.html  gruppemde_uge_18.html  gruppemde_uge_3.html  gruppemde_uge_5.html  gruppemde_uge_7.html  gruppemde_uge_9.html  (+33 more)
resources/: adverse_events.qmd  bedq.qmd  besg_1_screening.qmd  besgsdag_10_5f76.qmd  besgsdag_5.qmd  besgsdag_6.qmd  besgsdag_7.qmd  besgsdag_8.qmd  besoegsdag_2.qmd  besoegsdag_3.qmd  besoegsdag_4.qmd  besoegsdag_9.qmd  bookinger.qmd  diabetes_distress_paid5_scale.qmd  diabetes_status.qmd  ekstra_kontakt.qmd  european_quality_of_life_5_dimensions_eq5d5l.qmd  fase_1_ditetiske_afvigelser.qmd  fase_2_ditetiske_afvigelser.qmd  fase_3_ditetiske_afvigelser.qmd  foer_besoegsdag_2.qmd  foer_besoegsdag_3.qmd  foer_besoegsdag_4.qmd  fr_besgsdag_1_screening.qmd  fr_besgsdag_5.qmd  fr_besgsdag_5_9bba.qmd  fr_besgsdag_6.qmd  fr_besgsdag_7.qmd  fr_besgsdag_8.qmd  fr_besgsdag_9.qmd  gruppemde_uge_1.qmd  gruppemde_uge_11.qmd  gruppemde_uge_13.qmd  gruppemde_uge_15.qmd  gruppemde_uge_17.qmd  gruppemde_uge_18.qmd  gruppemde_uge_3.qmd  gruppemde_uge_5.qmd  gruppemde_uge_7.qmd  gruppemde_uge_9.qmd  (+31 more)
scripts/: __init__.py  data_dictionary.json  form_event.json  package_properties.py  redcap.py  redcap_data.py  redcap_data_dict_to_resource_properties.py  redcap_dict_to_properties.py  redcap_metadata.py  repeating_instruments.json  stage_data.py
site_libs/bootstrap/: bootstrap-0151c4d6cd6dce4232373e799753f2fc.min.css  bootstrap-0ce7ee9fc568459d355dd34459efaee1.min.css  bootstrap-41be365700c38290332df292e26e8603.min.css  bootstrap-70a1e034581259028685d498ead942ac.min.css  bootstrap-78d89494a31b96dddb1406a1fdf4b751.min.css  bootstrap-82d1fe152f1da93a379d290d56767960.min.css  bootstrap-90e8a6480b8a91cf6394234e913565b3.min.css  bootstrap-9c17c142eb16cfcd3eb85226b01bca21.min.css  bootstrap-9dbc5fbf1a8feb263b6906d4050d84c5.min.css  bootstrap-be6063474ad1c7e07d3d2cbec599d085.min.css  bootstrap-dark-37d5d69685b1e266b85d2100a14c6b7e.min.css  bootstrap-dark-5c51ad2249d4d22148baca1adaae32d7.min.css  bootstrap-dark-5fc1e6a45b52ea03c644fb345d6e95cb.min.css  bootstrap-dark-67c672c6a2155c1e5218ab65bd172ea8.min.css  bootstrap-dark-9e12636593b442416717b8f0ff147176.min.css  bootstrap-dark-a7e8a6a5a2b720dc7151bb297c977ee2.min.css  bootstrap-dark-b48f11eb72c1038d0a7b7cab75e910d9.min.css  bootstrap-dark-d7374d5eb1bc0abcbc1ac7bd6b8b2b7f.min.css  bootstrap-dark-dbce4259c8d7b1c7b49e1294f4fa0d4c.min.css  bootstrap-dark-f9c149ba3a10f1590f768a124c37842e.min.css
src/feasibility_data/: __init__.py  build.py  package_properties.py  redcap_dict_to_properties.py  redcap_metadata.py
src/feasibility_data/common/: redcap.py
src/feasibility_data/common/redcap/: __init__.py  api.py  json.py
src/feasibility_data/data/redcap/: __init__.py  core.py  raw.py  vas.py
src/feasibility_data/metadata/: core.py
src/feasibility_data/metadata/redcap/: __init__.py  core.py  (+3 more)
