[project]
name = "feasibility-data"
version = "0.1.0"
description = "Data package set up to handle the data from the ON LiMiT pilot study. This will be coming in from a REDCap API and a variety of csv files."
authors = [
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  # Add more authors as needed.
]
maintainers = [
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  # Add more maintainers as needed.
]
readme = "README.md"

license = "MIT"
license-files = ["LICENSE-MIT.md"]

requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.0",
    "seedcase-sprout>=0.49.0",
]

[project.urls]
issues = "https://github.com/onlimit-study/feasibility-data/issues"
repository = "https://github.com/onlimit-study/feasibility-data"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "typos>=1.40.0",
]
