[project]
name = "feasibility-data"
version = "0.1.0"
description = "A Data Package for the ON LiMiT feasibility study. The data itself is connected to this Data Package via storage on GenomeDK at Aarhus University, Denmark but is not publicly accessible. The publicly accessible content of this Data Package is the documenatation and metadata associated with the data."
authors = [
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Daniel Ibsen", email = "dbi@ph.au.dk" },
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
maintainers = [
  {name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  {name = "Daniel Ibsen", email = "dbi@ph.au.dk" },
  {name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  {name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  {name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"

license = "MIT"
license-files = ["LICENSE-MIT.md"]

requires-python = ">=3.12"
dependencies = [
    "polars>=1.36.0",
    "seedcase-sprout>=0.49.0",
]

[project.urls]
issues = "https://github.com/onlimit-study/feasibility-data/issues"
repository = "https://github.com/onlimit-study/feasibility-data"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "typos>=1.40.0",
]
