[project]
name = "feasibility-data"
version = "0.12.0"
description = "A Data Package for the ON LiMiT feasibility study. The data itself is connected to this Data Package via storage on GenomeDK at Aarhus University, Denmark but is not publicly accessible. The publicly accessible content of this Data Package is the documentation and metadata associated with the data."
authors = [
  { name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  { name = "Daniel Ibsen", email = "dbi@ph.au.dk" },
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
  { name = "Joel Ostblom", email = "joel@joelostblom.com" },
]
maintainers = [
  { name = "Kristiane Beicher", email = "kris.beicher@clin.au.dk" },
  { name = "Daniel Ibsen", email = "dbi@ph.au.dk" },
  { name = "Luke W. Johnston", email = "lwjohnst@gmail.com" },
  { name = "Signe Kirk Brødbæk", email = "signekb@clin.au.dk" },
  { name = "Marton Vago", email = "marton.vago95@gmail.com" },
]
readme = "README.md"

license = "MIT"
license-files = ["LICENSE-MIT.md"]

requires-python = ">=3.12"
dependencies = [
  "polars>=1.42.1",
  "python-dotenv>=1.2.2",
  "requests>=2.32.5",
  "seedcase-flower>=0.28.1",
  "seedcase-sprout>=0.49.7",
]

[project.urls]
homepage = "https://onlimit-study.github.io/feasibility-data"
repository = "https://github.com/onlimit-study/feasibility-data"
issues = "https://github.com/onlimit-study/feasibility-data/issues"
changelog = "https://github.com/onlimit-study/feasibility-data/blob/main/CHANGELOG.md"

[tool.ruff]
extend = ".config/ruff.toml"

[tool.mypy]
python_version = 3.12
strict = true

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "types-requests>=2.32.4.20260107",
]
